2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Update test suite output.
	* tests/optimization-problem-1.stdout,
	* tests/plugin.stdout,
	* tests/simple-1.stdout,
	* tests/simple-2.stdout,
	* tests/simple.stdout: Regenerate.

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Integrate new parameters management system.
	* configure.ac: Require a newer version.
	* include/roboptim/core/plugin/cfsqp.hh: Remove old attributes and
	replace them by parameters.
	* src/roboptim-core-cfsqp-plugin.cc: Implement parameter retrieval and
	initialize properly parameters vector when instantiating the solver.

2009-11-19  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-11-18  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix requirements in spec file.
	* roboptim-core-cfsqp-plugin.spec.in: Here.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS.
	* NEWS: Fill release v0.4 information.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Do not generate pkg-config file for modules.
	* Makefile.am: Here.

2009-11-16  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize/.
	* Makefile.am: Include release related rules.
	* build-aux: Synchronize.
	* doc/Makefile.am: Fix include path.

2009-11-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core-cfsqp-plugin.spec.in: Split shared libraries
	into user and developper packages.

2009-11-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix spec file.
	* roboptim-core-cfsqp-plugin.spec.in: Fix description, package
	development library in devel package, fix ChangeLog section
	version number.

2009-11-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Add RPM support.
	* Makefile.am: Distribute CFSQP related files.
	* build-aux: Synchronize.
	* configure.ac: Fix package short name.
	* roboptim-core-cfsqp-plugin.spec.in: New.

2009-11-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Make sure ``sys.hh'' is included first.